tests-system/arrays-2/output
arr[0] == len(arr), "potato", arr
^^^ arrays-2/example.rsl:8: error: expression 'arr' has type Integer, which is not an array
Processed 1 model(s), 0 check(s) and 0 requirement file(s) and found 1 error(s)
